2.0.16
======
- Automatically add @PathVariable's to model when using Spring 3.1 or newer. 


2.0.15
======
- Made "beans" context variable not override a variable with the same name, if such variable comes
  from the model.
- Fixed: Added "SpringTemplateEngine.setTemplateEngineMessageSource(...)" for letting users really 
  specify a MessageSource to be used by thymeleaf overriding the one automatically set by Spring.


2.0.14
======
- Refactored SpelEvaluationContext to act as a decorator (requirement for thymeleaf-extras-springsecurity3).


2.0.13
======
- (No changes)


2.0.12
======
- Fixed "viewClass" property in ThymeleafViewResolver requiring an implementation of
  ThymeleafView instead of AbstractThymeleafView.
- Added AjaxEnabledView interface for views that include an "ajaxHandler" property.


2.0.11
======
- Add "getFragmentSpec()" / "setFragmentSpec(IFragmentSpec)" methods to ThymeleafView in order to 
  allow the processing of "partial" views (only the template fragments selected by the IFragmentSpec 
  will be processed and rendered).
- Add AJAX-enabled AjaxThymeleafViewResolver and AjaxThymeleafView, making use of an AjaxHandler 
  instance from Spring JS (part of Spring Webflow).
- Add AJAX-enabled FlowAjaxThymeleafView, for Spring WebFlow integration.


2.0.10
======
- (No changes)


2.0.9
=====
- Added RequestContext variable to Model as AbstractTemplateView.SPRING_MACRO_REQUEST_CONTEXT_ATTRIBUTE
  besides thymeleaf's own SpringContextVariableNames.SPRING_REQUEST_CONTEXT for better compatibility
  with other view-layer technologies.
- Added an HttpServletResponse parameter to SpringWebContext constructors in order to be able to access
  response from processors.
- Refactored SpringEL expression evaluation.
- Added "viewClass" property to ThymeleafViewResolver.


2.0.8
=====
- (No changes)


2.0.7
=====
- (No changes)


2.0.6
=====
- (No changes)


2.0.5
=====