@@ -1,6 +1,7 @@
 2.0.16
 ======
 - Automatically add @PathVariable's to model when using Spring 3.1 or newer. 
+- Forbidden the inclusion of request parameter variables ('param.*') in preprocessing expressions.
 
 
 2.0.15
